apps/base/killedby/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: killedby
  namespace: killedby
spec:
  replicas: 3
  selector:
    matchLabels:
      app: killedby
  template:
    metadata:
      labels:
        app: killedby
    spec:
      containers:
      - name: killedby
        image: bacherik/killedby:v1.2.1
        ports:
        - containerPort: 8080
