apps/base/killedby/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: killedby
  namespace: killedby
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - killedby.bacherik.de
      secretName: killedby-tls
  rules:
    - host: "killedby.bacherik.de"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: killedby
                port:
                  number: 80
